--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
 	max-height: 180px;
 	background-color: var(--second-color);
 	padding: 5px;
-	border: 5px solid white;
+	border: 3px solid white;
 	display: grid;
 	grid-template-columns: repeat(9, 1fr);
 	grid-template-rows: repeat(3, 1fr);
@@ -85,4 +85,15 @@ body {
 .button svg {
 	width: 40px;
 	height: 40px;
+}
+
+@media screen and (min-width: 768px) {
+	.bingoCard {
+		max-height: none;
+		border: 5px solid white;
+	}	
+
+	.locker {
+		font-size: 2rem;
+	}
 }
