--- a/style.css
+++ b/style.css
@@ -42,13 +42,13 @@ body {
 	min-width: 315px;
 	max-height: 180px;
 	background-color: var(--second-color);
-	padding: 5px;
+	padding: 3px;
 	border: 3px solid white;
 	display: grid;
 	grid-template-columns: repeat(9, 1fr);
 	grid-template-rows: repeat(3, 1fr);
-	grid-column-gap: 5px;
-	grid-row-gap: 5px;
+	grid-column-gap: 3px;
+	grid-row-gap: 3px;
 	grid-auto-flow: column;
 }
 
@@ -89,8 +89,11 @@ body {
 
 @media screen and (min-width: 768px) {
 	.bingoCard {
-		max-height: none;
+		max-height: 280px;
 		border: 5px solid white;
+		grid-column-gap: 5px;
+		grid-row-gap: 5px;
+		padding: 5px;
 	}	
 
 	.locker {
